# market-OS

backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0265fc24d849_merchant_created_at_timestamp_bug_fixed.py  72fd3b4d7625_timestamp_bug_fixed.py  c392c323abc8_initial_tables.py
backend/app/models/: __init__.py  inventory.py  merchant.py
backend/app/routers/: webhook.py
backend/app/services/: merchant_service.py  message_service.py
backend/core/: config.py  messages.py  session.py
frontend/market-os/: package.json  pnpm-lock.yaml
frontend/market-os/app/: AnimatedBackground.tsx  BorderFrame.tsx  HeroIllustration.tsx  ParallelogramButton.tsx  PricingCard.tsx  globals.css  layout.tsx  page.tsx
frontend/market-os/app/components/: HologramBackground.tsx  HologramLines.tsx  Navbar.tsx  ThreeScene.tsx  WhatsAppMockup.tsx
frontend/market-os/app/pricing/: page.tsx
