[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
]
